--- a/P001854.opf/meta.yml
+++ b/P001854.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P001854
+id: P001854
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG16575
   title: ཡིག་གཟུགས་ཀྱི་ཀ་དཔེ་སློབ་མའི་སྙིང་ནོར།
-  volume: ''
   author: ''
+  volumes: {}
