volumes of meta updated

--- a/P001854.opf/meta.yml
+++ b/P001854.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG16575
   title: ཡིག་གཟུགས་ཀྱི་ཀ་དཔེ་སློབ་མའི་སྙིང་ནོར།
   author: ''
-  volumes: {}
+  volumes:
+    99d209b934864ee285762f16a05a77b4:
+      image_group_id: I2PD17869
+      title: ''
+      volume_number: 1
+      total_pages: 56
