added imgnum to the pagination

--- a/P001854.opf/layers/v001/pagination.yml
+++ b/P001854.opf/layers/v001/pagination.yml
@@ -3,317 +3,272 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   49024f0fc70f4c468369c4883eafbbea:
-    page_index: 1a
-    page_info: null
-    reference: I2PD178690001
+    imgnum: 1
+    reference: I2PD178690001.tif
     span:
       start: 0
       end: 738
   166b9210ef1c4b24948939d62f03c384:
-    page_index: 2a
-    page_info: null
-    reference: I2PD178690003
+    imgnum: 3
+    reference: I2PD178690003.jpg
     span:
       start: 743
       end: 856
   add317b5177e491880a22c6bec6b0af3:
-    page_index: 3a
-    page_info: null
-    reference: I2PD178690005
+    imgnum: 5
+    reference: I2PD178690005.jpg
     span:
       start: 861
       end: 986
   069fcba810fc41c294fd9c63d7929679:
-    page_index: 3b
-    page_info: null
-    reference: I2PD178690006
+    imgnum: 6
+    reference: I2PD178690006.jpg
     span:
       start: 991
       end: 1694
   477d4de9d2404aaa9a9966fb21109fb5:
-    page_index: 4a
-    page_info: null
-    reference: I2PD178690007
+    imgnum: 7
+    reference: I2PD178690007.jpg
     span:
       start: 1699
       end: 2656
   9bd0b7a06e7d4e91885a15f1f181e917:
-    page_index: 4b
-    page_info: null
-    reference: I2PD178690008
+    imgnum: 8
+    reference: I2PD178690008.jpg
     span:
       start: 2661
       end: 3325
   470651f44605442194ee278d660fd5db:
-    page_index: 7a
-    page_info: null
-    reference: I2PD178690013
+    imgnum: 13
+    reference: I2PD178690013.jpg
     span:
       start: 3330
       end: 3349
   9bf9f2cf2bd042ebb6135a80c57382d5:
-    page_index: 8b
-    page_info: null
-    reference: I2PD178690016
+    imgnum: 16
+    reference: I2PD178690016.jpg
     span:
       start: 3354
       end: 3379
   3707a4e077e5419a9deddf89699cfd3f:
-    page_index: 9a
-    page_info: null
-    reference: I2PD178690017
+    imgnum: 17
+    reference: I2PD178690017.jpg
     span:
       start: 3384
       end: 3453
   4be27e27d583400a8fb785417e0ed7fe:
-    page_index: 9b
-    page_info: null
-    reference: I2PD178690018
+    imgnum: 18
+    reference: I2PD178690018.jpg
     span:
       start: 3458
       end: 3557
   3e1020a7ea444aa38b270fff2f4c6034:
-    page_index: 10a
-    page_info: null
-    reference: I2PD178690019
+    imgnum: 19
+    reference: I2PD178690019.jpg
     span:
       start: 3562
       end: 3667
   92aa7f294f9b41609caebf21f3650428:
-    page_index: 10b
-    page_info: null
-    reference: I2PD178690020
+    imgnum: 20
+    reference: I2PD178690020.jpg
     span:
       start: 3672
       end: 3749
   42523fb8615d4cd98dbfab5d13481148:
-    page_index: 11a
-    page_info: null
-    reference: I2PD178690021
+    imgnum: 21
+    reference: I2PD178690021.jpg
     span:
       start: 3754
       end: 3823
   fe8c7903c9af4165bac39554301ed252:
-    page_index: 11b
-    page_info: null
-    reference: I2PD178690022
+    imgnum: 22
+    reference: I2PD178690022.jpg
     span:
       start: 3828
       end: 3899
   50d4fca419374bab8a8d18fb248dc475:
-    page_index: 12a
-    page_info: null
-    reference: I2PD178690023
+    imgnum: 23
+    reference: I2PD178690023.jpg
     span:
       start: 3904
       end: 3956
   8e91379183bb4fe3993cb4f29d097893:
-    page_index: 12b
-    page_info: null
-    reference: I2PD178690024
+    imgnum: 24
+    reference: I2PD178690024.jpg
     span:
       start: 3961
       end: 4012
   193407e06649468695776b02dc989e52:
-    page_index: 13a
-    page_info: null
-    reference: I2PD178690025
+    imgnum: 25
+    reference: I2PD178690025.jpg
     span:
       start: 4017
       end: 4032
   efd860e3267e457380ba538f19f53abe:
-    page_index: 13b
-    page_info: null
-    reference: I2PD178690026
+    imgnum: 26
+    reference: I2PD178690026.jpg
     span:
       start: 4037
       end: 4041
   53468345f7324b87ba455299fb76e286:
-    page_index: 14a
-    page_info: null
-    reference: I2PD178690027
+    imgnum: 27
+    reference: I2PD178690027.jpg
     span:
       start: 4046
       end: 4075
   0e215975678b400b9a7ccddb4302ebdb:
-    page_index: 14b
-    page_info: null
-    reference: I2PD178690028
+    imgnum: 28
+    reference: I2PD178690028.jpg
     span:
       start: 4080
       end: 4099
   df9c57160255438a80eb9d8e9c47a2f0:
-    page_index: 15a
-    page_info: null
-    reference: I2PD178690029
+    imgnum: 29
+    reference: I2PD178690029.jpg
     span:
       start: 4104
       end: 4163
   915a873567de4560aa25f229f0ec2b41:
-    page_index: 15b
-    page_info: null
-    reference: I2PD178690030
+    imgnum: 30
+    reference: I2PD178690030.jpg
     span:
       start: 4168
       end: 4262
   f141ae1628514dc79b457941ab8ff58a:
-    page_index: 16a
-    page_info: null
-    reference: I2PD178690031
+    imgnum: 31
+    reference: I2PD178690031.jpg
     span:
       start: 4267
       end: 4333
   a0d36956fba34307af58ebc3438d9da3:
-    page_index: 16b
-    page_info: null
-    reference: I2PD178690032
+    imgnum: 32
+    reference: I2PD178690032.jpg
     span:
       start: 4338
       end: 4421
   77e64dfb58bd4221bb3156c0baebb5df:
-    page_index: 17a
-    page_info: null
-    reference: I2PD178690033
+    imgnum: 33
+    reference: I2PD178690033.jpg
     span:
       start: 4426
       end: 4484
   c36f5bbe75fb4943ad7f8953ccaa7e46:
-    page_index: 17b
-    page_info: null
-    reference: I2PD178690034
+    imgnum: 34
+    reference: I2PD178690034.jpg
     span:
       start: 4489
       end: 4518
   eff89e1c04874581b103e3715f83c56a:
-    page_index: 18a
-    page_info: null
-    reference: I2PD178690035
+    imgnum: 35
+    reference: I2PD178690035.jpg
     span:
       start: 4523
       end: 4715
   0fb4761e4c624f339402f301686ed53a:
-    page_index: 18b
-    page_info: null
-    reference: I2PD178690036
+    imgnum: 36
+    reference: I2PD178690036.jpg
     span:
       start: 4720
       end: 4963
   6beb7d0a55ff47c8ab15b9d0968cdcac:
-    page_index: 19a
-    page_info: null
-    reference: I2PD178690037
+    imgnum: 37
+    reference: I2PD178690037.jpg
     span:
       start: 4968
       end: 5175
   f259cb2158dd44a88affaec8368813f4:
-    page_index: 20a
-    page_info: null
-    reference: I2PD178690039
+    imgnum: 39
+    reference: I2PD178690039.jpg
     span:
       start: 5180
       end: 5389
   ba8f3e045c364ef9b778fa4abbe2afee:
-    page_index: 20b
-    page_info: null
-    reference: I2PD178690040
+    imgnum: 40
+    reference: I2PD178690040.jpg
     span:
       start: 5394
       end: 5537
   47f0ac7a9cc643839a3299f2731075dd:
-    page_index: 21a
-    page_info: null
-    reference: I2PD178690041
+    imgnum: 41
+    reference: I2PD178690041.jpg
     span:
       start: 5542
       end: 5780
   d4ad2a2ed0dc410e83ed6679531f67e9:
-    page_index: 21b
-    page_info: null
-    reference: I2PD178690042
+    imgnum: 42
+    reference: I2PD178690042.jpg
     span:
       start: 5785
       end: 6013
   6c13d7c799c448359dfd8f13a5b2c811:
-    page_index: 22a
-    page_info: null
-    reference: I2PD178690043
+    imgnum: 43
+    reference: I2PD178690043.jpg
     span:
       start: 6018
       end: 6261
   2dc3f143593a46999f387657760df75e:
-    page_index: 22b
-    page_info: null
-    reference: I2PD178690044
+    imgnum: 44
+    reference: I2PD178690044.jpg
     span:
       start: 6266
       end: 6413
   2efbe95064a24f168286d5134708a997:
-    page_index: 23a
-    page_info: null
-    reference: I2PD178690045
+    imgnum: 45
+    reference: I2PD178690045.jpg
     span:
       start: 6418
       end: 6474
   a787a4a34a694c4a950e06ea6d66d630:
-    page_index: 23b
-    page_info: null
-    reference: I2PD178690046
+    imgnum: 46
+    reference: I2PD178690046.jpg
     span:
       start: 6479
       end: 6600
   32dc413482714937bf26e5ad04e3d239:
-    page_index: 24a
-    page_info: null
-    reference: I2PD178690047
+    imgnum: 47
+    reference: I2PD178690047.jpg
     span:
       start: 6605
       end: 6919
   783ef0ec8cad4feabb792052edb254cf:
-    page_index: 24b
-    page_info: null
-    reference: I2PD178690048
+    imgnum: 48
+    reference: I2PD178690048.jpg
     span:
       start: 6924
       end: 7231
   dc5a6408e12f4769a432b35cbadbeade:
-    page_index: 25a
-    page_info: null
-    reference: I2PD178690049
+    imgnum: 49
+    reference: I2PD178690049.jpg
     span:
       start: 7236
       end: 7445
   88ce8437bd01473183e4d7a730a48122:
-    page_index: 26a
-    page_info: null
-    reference: I2PD178690051
+    imgnum: 51
+    reference: I2PD178690051.jpg
     span:
       start: 7450
       end: 7723
   541c5a47bd0b46d083c107015fd8d0c4:
-    page_index: 26b
-    page_info: null
-    reference: I2PD178690052
+    imgnum: 52
+    reference: I2PD178690052.jpg
     span:
       start: 7728
       end: 7828
   2653a152991c4ad6889a05a7d8a006bd:
-    page_index: 27a
-    page_info: null
-    reference: I2PD178690053
+    imgnum: 53
+    reference: I2PD178690053.jpg
     span:
       start: 7833
       end: 8435
   2b9cc584377b4c8e8d02da42df06d67e:
-    page_index: 27b
-    page_info: null
-    reference: I2PD178690054
+    imgnum: 54
+    reference: I2PD178690054.jpg
     span:
       start: 8440
       end: 8472
   b1ae687f9f7a490bb1b9018d3fbc7c0d:
-    page_index: 28b
-    page_info: null
-    reference: I2PD178690056
+    imgnum: 56
+    reference: I2PD178690056.jpg
     span:
       start: 8477
       end: 8659
