--- a/P001854.opf/layers/v001/Pagination.yml
+++ b/P001854.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5e5209ff6bd24faebc9e04577810ddd8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   49024f0fc70f4c468369c4883eafbbea:
